<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@android:color/white"
    android:padding="10dp">
   
    <TextView 
            android:id="@+id/textview_feedback_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/TXT_YOUR_FEEDBACK"
            android:textSize="24dp"/>
    
    <TextView 
            android:id="@+id/textview_feedback_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/TXT_FEEDBACK_DESCRIPTION"
            android:textSize="18dp"/>
    
    <EditText 
            android:id="@+id/edittext_enter_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/TXT_EDITTEXT_NAME_HINT"/>
    
    <EditText 
            android:id="@+id/edittext_enter_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/TXT_EDITTEXT_EMAIL_HINT"/>
    
    <EditText 
            android:id="@+id/edittext_enter_comments"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:hint="@string/TXT_EDITTEXT_COMMENTS_HINT"/>
    
    <Button 
                android:id="@+id/button_send"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/BTN_SEND"/>
    
</LinearLayout>