<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
        android:layout_marginTop="20dp">
        
        <ImageView 
            android:id="@+id/heritage_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_main_screen"
            android:scaleType="fitCenter"/>
        
        <Button 
            android:id="@+id/button_mobile_banking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BTN_LOGIN_MOBILE_BANKING"/>        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">
        
        <TextView 
            android:id="@+id/textview_find_nearest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/TXT_FIND_NEAREST"
            android:textSize="18dp"/>
        
        <EditText 
            android:id="@+id/edittext_enter_postcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TXT_EDITTEXT_POSTCODE_HINT"/>
        
        <LinearLayout
             android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"
		     android:gravity="center_horizontal">
            
            <Button 
                android:id="@+id/button_atm"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/BTN_ATM"/>
            
            <Button 
                android:id="@+id/button_branch"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/BTN_BRANCH"/>
            
        </LinearLayout>
        
         <Button 
                android:id="@+id/button_search"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/BTN_SEARCH"/>
        
    </LinearLayout>

</LinearLayout>